erDiagram
    users ||--o{ club_members : "加入"
    users ||--o{ club_followers : "追蹤"
    users ||--o{ event_registrations : "報名"
    users ||--o{ event_comments : "評論"
    users ||--o{ q_and_a : "提問"
    users ||--o{ qa_replies : "回覆"
    users ||--o{ reviews : "評價"
    users ||--o{ notifications : "接收"
    users ||--o{ system_announcements : "建立"
    users ||--o{ account_transfer_requests : "提出"

    club_categories ||--o{ clubs : "分類"
    clubs ||--o{ club_members : "成員"
    clubs ||--o{ club_followers : "被追蹤"
    clubs ||--o{ events : "舉辦"
    clubs ||--o{ q_and_a : "問答"
    clubs ||--o{ reviews : "評價"
    clubs ||--o{ account_transfer_requests : "申請"
    clubs ||--o{ account_transfers : "轉讓"

    clubs ||--o{ club_tag_relations : "標籤關聯"
    club_tags ||--o{ club_tag_relations : "標籤關聯"

    events ||--o{ event_registrations : "報名"
    events ||--o{ event_comments : "評論"
    events ||--o{ collaborative_events : "協辦"
    clubs ||--o{ collaborative_events : "協辦社團"

    q_and_a ||--o{ qa_replies : "回覆"
    q_and_a ||--o{ qa_tag_relations : "提問標籤"
    qa_tags ||--o{ qa_tag_relations : "提問標籤"

    reviews ||--o{ review_tag_relations : "評價標籤"
    review_tags ||--o{ review_tag_relations : "評價標籤"

    reports }o--|| users : "檢舉者/審核者"
    participation_certificates }o--|| users : "使用者"
    participation_certificates }o--|| clubs : "社團"
